# gsf_3names_read

./: .gitignore  CMakeLists.txt  LICENSE  README.md
res/: 3names.zip.nasm
src/: main.c
